@@ -20,6 +20,12 @@ Many improvements in the new dialog code:
 
 ***
 
+For a few development versions, translations of User Made Content have not
+worked due to a tiny mistake in the translation engine. That has been fixed
+in this release.
+
+***
+
 Improvements of the multiplayer ui:
 - Added a gui front-end to various commands, brought up by double clicking
   a player name, replacing the old whisper dialog
